# minimizers

./: .gitmodules  CMakeLists.txt  README.md
include/: algorithms.hpp  decycling.hpp  double_decycling.hpp  enumerator.hpp  hasher.hpp  mod_sampling.hpp  syncmer.hpp  util.hpp
script/: README.md  varying_k.sh  varying_w.sh
src/: algorithms.cpp
tool/: density.cpp  generate_random_fasta.cpp  generate_random_sequence.cpp
